--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
+    "popper.js": "^1.12.9",
     "serve-favicon": "~2.4.2",
     "swig": "^1.4.2"
   }
