--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "ejs": "^2.5.7",
     "express": "~4.15.2",
+    "highcharts": "^6.0.7",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
